# gh-bench

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  pyproject.toml
data/scenarios/: demonstration_attack.py  issue_duplicate_bug.py
data/workflows/pr-reviewer-hardened/: metadata.json
paper/: TODO.md  references.txt
plans/: architecture.md  concerns.md  scenarios.md
reports/: README.md  use-cases.md
research/: README.md  gemini_md_instructions_injection_replication.md  gitlab_bitbucket_generalization.md
research/scenarios/: ci_log_injection_workflow_poisoning.md  codex_agents_md_injection.md  dos_request_flood.md  gemini_api_key_exfiltration.md  gemini_md_instructions_injection.md  gemini_md_instructions_injection_replication.md  nsfw_api_key_block.md  pr_token_exfiltration_via_git_config.md  supply_chain_malicious_code.md
research/scenarios/dropped/: claude_md_instructions_injection.md  supply_chain_token_pivot.md
src/benchmark/: analyzer.py  cli.py  evaluators.py  runner.py  scenario_base.py  simulator.py
src/benchmark/attacks/: __init__.py  autoinject.py  base.py  static.py
src/benchmark/config/: adversarial_swaps.json
src/benchmark/scenarios/: automated_refactor_request.py  demonstration_attack.py  dependency_poisoning_check.py  destructive_tool_use.py  documentation_out_of_sync.py  (+10 more)
tests/integration/: conftest.py  test_analyzer_real.py  test_gh_client_real.py  test_provisioner_real.py  test_runner_real.py
tests/unit/: test_analyzer.py  test_evaluators.py  test_gh_client.py  test_provisioner.py  test_runner.py
(+142 files in other folders)
